--- a/lawn_tractor/package.xml
+++ b/lawn_tractor/package.xml
@@ -8,7 +8,7 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>lawn_tractor_navigation</run_depend>
+  <run_depend>lawn_tractor_base</run_depend>
 
   <export>
     <metapackage/>
