--- a/lawn_tractor_base/CMakeLists.txt
+++ b/lawn_tractor_base/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.3)
-project(lawn_tractor_navigation)
+project(lawn_tractor_base)
 
 set(CMAKE_CXX_FLAGS "-std=c++11")
 set(CMAKE_CXX_STANDARD 11)
