--- a/simulation_ws/src/lawn_tractor_navigation/CMakeLists.txt
+++ b/simulation_ws/src/lawn_tractor_navigation/CMakeLists.txt
@@ -24,3 +24,11 @@ include_directories(
 install(DIRECTORY  launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(DIRECTORY  config
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
+install(DIRECTORY  scripts
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
