--- a/simulation_ws/src/lawn_tractor_sim/CMakeLists.txt
+++ b/simulation_ws/src/lawn_tractor_sim/CMakeLists.txt
@@ -185,7 +185,7 @@ include_directories(
 # )
 
 install(DIRECTORY launch maps meshes rviz scripts stage urdf
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
 #############
