Install gps_points_file.txt
Not sure if this is needed for sim, but this is how to install it.

--- a/simulation_ws/src/lawn_tractor_navigation/CMakeLists.txt
+++ b/simulation_ws/src/lawn_tractor_navigation/CMakeLists.txt
@@ -32,3 +32,7 @@ install(DIRECTORY  config
 install(DIRECTORY  scripts
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(FILES gps_points_file.txt
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
