--- a/simulation_ws/src/lawn_tractor_navigation/CMakeLists.txt
+++ b/simulation_ws/src/lawn_tractor_navigation/CMakeLists.txt
@@ -21,14 +21,6 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-install(DIRECTORY  launch
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-
-install(DIRECTORY  config
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-
-install(DIRECTORY  scripts
+install(DIRECTORY  launch config scripts
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
