--- a/simulation_ws/src/lawn_tractor_sim/CMakeLists.txt
+++ b/simulation_ws/src/lawn_tractor_sim/CMakeLists.txt
@@ -188,6 +188,11 @@ install(DIRECTORY launch maps meshes rviz scripts stage urdf
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
+install(PROGRAMS
+    scripts/odom_to_lla.py
+    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
 #############
 ## Testing ##
 #############
