--- a/simulation_ws/src/lawn_tractor_sim/package.xml
+++ b/simulation_ws/src/lawn_tractor_sim/package.xml
@@ -25,6 +25,9 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>stage_ros</exec_depend>
+  <depend>nav_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geonav_transform</depend>
 
 
 
